--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint \"src/**/*.ts\" --fix",
     "build": "tsc",
-    "start:dev": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/index.ts"
+    "start:dev": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/index.ts",
+    "start:prod": "tsc && node dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.3.2",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "cross-env": "^7.0.3",
@@ -28,6 +30,7 @@
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4",
+    "uuid": "^9.0.0",
     "webpack": "^5.88.0",
     "webpack-cli": "^5.1.4"
   }
